# update-docs-pls

./: README.md  action.yaml  local_test.bat  main.py  pyproject.toml
.github/: UpdateDocsPls.yaml
.github/workflows/: unittest.yaml  workflow.yaml
gha/: context.py  exceptions.py
gha/models/: action.py  file.py  pr.py  repo.py  user.py
tests/: test_config.py  test_templater.py  test_update_docs.py
tests/data/: pr.json  test_config.yaml  workflow.yaml
update_docs_pls/: config.py  exceptions.py  message.py  models.py  updatedocs.py
